# dt002g-group5

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: black.yml  pytest.yml
prototype/: node.py
prototype/data_load/: data_loader.py
prototype/mock/: mock_cst.py
prototype/mutation/: mutate.py  mutation_engine.py  mutation_rule.py
prototype/parsing/: adapter.py  parse.py  parser.py
review/: review.md
src/tests/data_loading/: test_data_loader.py
src/transtructiver/: __init__.py  node.py
src/transtructiver/data_loading/: data_loader.py
src/transtructiver/mutation/: README.md  mutation_engine.py  mutation_manifest.py  mutation_rule.py  mutation_types.py
src/transtructiver/mutation/rule/: variable_renaming.py
src/transtructiver/mutation/rules/: README.md  comment_deletion.py  comment_normalization.py  mutation_rule.py  whitespace_normalization.py
src/transtructiver/parsing/: adapter.py  converter.py  parser.py
src/transtructiver/parsing/annotation/: annotator.py  builtin_checker.py  cpp_annotator.py  java_annotator.py  (+1 more)
src/transtructiver/prototype/: cli.py  manifest.json  node.py
tests/: test_node.py
tests/data_loading/: test_data_loader.py
tests/mutation/: test_mutation_engine.py  test_mutation_manifest.py  test_mutation_rule.py  test_mutation_types.py
tests/mutation/rules/: test_comment_deletion.py  test_rename_identifier.py  test_whitespace_normalization.py
tests/parsing/: __init__.py  test_adapter.py  test_annotation.py  test_converter.py  test_parser.py
tests/verification/: test_si_verifier.py
(+27 files in other folders)
